<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">May13</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_name_hint">Escribe tu nombre</string>
    <string name="send">Enviar</string>
    <string name="btn1">Estos</string>
    <string name="btn2">son otros</string>
    <string name="btn3">botones</string>
    <string name="title_activity_answer">AnswerActivity</string>
    <string name="no_content">No hay contenido</string>

</resources>
